--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     strategy:
       matrix:
-        platform: [ubuntu-latest, windows-latest] # macos-latest
+        platform: [ubuntu-latest, windows-latest, macos-latest]
         include:
           - platform: ubuntu-latest
             configure_preset: 'static'
@@ -23,6 +23,13 @@ jobs:
             configure_preset: 'windows-static'
             build_preset: 'windows-static-release'
             release_name: 'windows-x64'
+
+          - platform: macos-latest
+            configure_preset: 'default'
+            build_preset: 'release'
+            release_name: 'macos-x64'
+            cc: '/usr/local/opt/llvm/bin/clang'
+            cxx: '/usr/local/opt/llvm/bin/clang++'
 
     runs-on: ${{matrix.platform}}
 
@@ -39,8 +46,20 @@ jobs:
         vcpkgJsonGlob: 'vcpkg.json'
 
     - name: Install requirements
-      run: sudo apt install gcc-11 g++-11 libfuse-dev
+      run: sudo apt install libfuse-dev
       if: matrix.platform == 'ubuntu-latest'
+
+    - name: Install requirements (MacOS)
+      run: |
+           brew update
+           # Temporary fix, see https://github.com/orgs/Homebrew/discussions/3895
+           brew install --overwrite python@3.11
+           brew install llvm
+           brew install macfuse
+           echo "LDFLAGS=-L/usr/local/opt/llvm/lib" >> $GITHUB_ENV
+           echo "CXXFLAGS=-isystem /usr/local/opt/llvm/include" >> $GITHUB_ENV
+      shell: bash
+      if: matrix.platform == 'macos-latest'
 
     - name: Set compiler
       run: |
@@ -80,9 +99,9 @@ jobs:
     - name: Prepare Release Windows
       run: powershell Compress-Archive -Path build\${{matrix.configure_preset}}\wfs-file-injector\Release\wfs-file-injector.exe, build\${{matrix.configure_preset}}\wfs-extract\Release\wfs-extract.exe, build\${{matrix.configure_preset}}\wfs-info\Release\wfs-info.exe -DestinationPath wfs-tools-${{github.ref_name}}-${{matrix.release_name}}.zip
       if: startsWith(github.ref, 'refs/tags/') && matrix.platform == 'windows-latest'
-    - name: Prepare Release Linux
+    - name: Prepare Release Linux & MacOS
       run: zip -r -j wfs-tools-${{github.ref_name}}-${{matrix.release_name}}.zip build/${{matrix.configure_preset}}/wfs-file-injector/Release/wfs-file-injector build/${{matrix.configure_preset}}/wfs-extract/Release/wfs-extract build/${{matrix.configure_preset}}/wfs-fuse/Release/wfs-fuse build/${{matrix.configure_preset}}/wfs-extract/Release/wfs-info
-      if: startsWith(github.ref, 'refs/tags/') && matrix.platform == 'ubuntu-latest'
+      if: startsWith(github.ref, 'refs/tags/') && matrix.platform != 'windows-latest'
 
     - name: Release
       uses: softprops/action-gh-release@v1
