--- a/pkgs/development/haskell-modules/configuration-hackage2nix/main.yaml
+++ b/pkgs/development/haskell-modules/configuration-hackage2nix/main.yaml
@@ -126,6 +126,7 @@ extra-packages:
   - versions < 6                        # 2024-04-22: required by spago-0.21
   - fsnotify < 0.4                      # 2024-04-22: required by spago-0.21
   - th-desugar == 1.16                  # 2024-06-28: preserve for GHC 9.8
+  - singletons-th == 3.3                # 2024-06-28: preserve for GHC 9.8
 
 package-maintainers:
   abbradar:
