--- a/.github/workflows/check-nix-format.yml
+++ b/.github/workflows/check-nix-format.yml
@@ -54,6 +54,8 @@ jobs:
           NIX_FMT_PATHS_VSCODE_EXTS: pkgs/applications/editors/vscode/extensions
           NIX_FMT_PATHS_PHP_PACKAGES: pkgs/development/php-packages
           NIX_FMT_PATHS_BUILD_SUPPORT_PHP: pkgs/build-support/php
+          NIX_FMT_PATHS_PYTHON: |-
+            pkgs/development/python-modules
         # Iterate over all environment variables beginning with NIX_FMT_PATHS_.
         run: |
           unformattedPaths=()
