--- a/.github/workflows/xnodeos-build-kexec.yml
+++ b/.github/workflows/xnodeos-build-kexec.yml
@@ -24,3 +24,12 @@ jobs:
         with:
           name: xnodeos-kexec-system-x86_64-linux.tar.xz
           path: result/tarball/nixos-system-x86_64-linux.tar.xz
+      - name: Upload Result to boot.opnm.sh
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: boot.opnm.sh
+          username: opnm
+          key: ${{secrets.BOOT_OPNM_SH_DEPLOY_KEY}}
+          source: result/tarball/nixos-system-x86_64-linux.tar.xz
+          target: /public/latest/${{GITHUB_REF_NAME}}/kexec
+          strip_components: 2
