Nix store results of build are all symlinks and result needs to be plain files. Overwrite is required to replace symbolic main/dev references at same filenames.

--- a/.github/workflows/xnodeos-build-iso.yml
+++ b/.github/workflows/xnodeos-build-iso.yml
@@ -32,3 +32,5 @@ jobs:
           source: result/iso/nixos.iso
           target: /public/${{GITHUB_REF_NAME}}/iso
           strip_components: 2
+          tar_dereference: true
+          overwrite: true
