--- a/.github/workflows/xnodeos-build-iso.yml
+++ b/.github/workflows/xnodeos-build-iso.yml
@@ -30,7 +30,7 @@ jobs:
           username: opnm
           key: ${{secrets.BOOT_OPNM_SH_DEPLOY_KEY}}
           source: result/iso/nixos.iso
-          target: /public/${{GITHUB_REF_NAME}}/iso
+          target: /mnt/boot-opnm-sh/public/${{GITHUB_REF_NAME}}/iso
           strip_components: 2
           tar_dereference: true
           overwrite: true
