--- a/pkgs/development/haskell-modules/configuration-hackage2nix/main.yaml
+++ b/pkgs/development/haskell-modules/configuration-hackage2nix/main.yaml
@@ -92,6 +92,8 @@ extra-packages:
   - lens-aeson < 1.2                    # 2022-12-17: For aeson < 2.0 compat
   - lsp == 2.1.0.0                      # 2024-02-28: need for dhall-lsp-server unstable
   - lsp-types == 2.0.2.0                # 2024-02-28: need for dhall-lsp-server unstable
+  - lsp < 2.5                           # 2024-07-08: need for koka
+  - lsp-types < 2.2                     # 2024-07-08: need for koka
   - mmorph == 1.1.3                     # Newest working version of mmorph on ghc 8.6.5. needed for hls
   - network == 2.6.3.1                  # required by pkgs/games/hedgewars/default.nix, 2020-11-15
   - optparse-applicative < 0.16         # needed for niv-0.2.19
