.envrc: add dotenv_if_exists

--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,6 @@
 use nix
+
+# following the advice from https://github.com/direnv/direnv/wiki/.envrc-Boilerplate
+# load developer's own local .env
+
+dotenv_if_exists || direnv status # https://direnv.net/man/direnv-stdlib.1.html
