haskellPackages.pandoc-crossref: pin to 0.3.19
This matches pandoc == 3.6.*.

--- a/pkgs/development/haskell-modules/configuration-hackage2nix/main.yaml
+++ b/pkgs/development/haskell-modules/configuration-hackage2nix/main.yaml
@@ -37,6 +37,8 @@ default-package-overrides:
   - hsc3 < 0.21
   # 2024-12-31: last version that's compatible with GHC < 9.9
   - htree < 0.2.0.0
+  # 2025-06-11: last version that supports pandoc == 3.6.* which is prescribed by LTS 23
+  - pandoc-crossref < 0.3.20
 # keep-sorted end
 
 # keep-sorted start skip_lines=1 case=no numeric=yes
